--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>Demo</h2>
     <ul>
       <li><a href="./demo/radio.html">Stylable radio button</a></li>
+      <li><a href="./demo/checkbox.html">Stylable checkbox</a></li>
     </ul>
 
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
