Update checkbox demo

--- a/demo/checkbox.html
+++ b/demo/checkbox.html
@@ -42,7 +42,7 @@ input[type="checkbox"] + label { color: blue }
       </div>
 
       <div style="margin-top: 1em">
-        <input type="checkbox" id="unique_id2" />
+        <input type="checkbox" id="unique_id2" checked="checked" />
         <label for="unique_id2">B</label>
       </div>
     </form>
