Update radio demo

--- a/demo/radio.html
+++ b/demo/radio.html
@@ -42,7 +42,8 @@ input[type="radio"] + label { color: blue }
       </div>
 
       <div style="margin-top: 1em">
-        <input type="radio" id="unique_id2" name="radioGroup" />
+        <input type="radio" id="unique_id2" 
+               name="radioGroup" checked="checked" />
         <label for="unique_id2">B</label>
       </div>
     </form>
