--- a/demo/radio.html
+++ b/demo/radio.html
@@ -36,6 +36,8 @@ input[type="radio"] + label { color: blue }
   background-image: url('http://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Checkbox.svg/27px-Checkbox.svg.png')
 }
 
+/* Label for disabled radio */
+.yacsscomp[disabled='disabled'] { background: silver }
     </style>
   </head>
   <body>
@@ -66,6 +68,12 @@ input[type="radio"] + label { color: blue }
 
         <button class="btn btn-default" id="display-val">
           Display value</button>
+
+        <button class="btn btn-default" id="disable">
+          Disable</button>
+
+        <button class="btn btn-default" id="enable">
+          Enable</button>
       </div>
     </div>
 
@@ -82,6 +90,12 @@ input[type="radio"] + label { color: blue }
       });
       $("#display-val").click(function() { 
         alert("Selected value: " + $("input[name='radioGroup']:checked").val())
+      });
+      $("#disable").click(function() { 
+        $(".yacsscomp").stylableRadio("disable")
+      });
+      $("#enable").click(function() { 
+        $(".yacsscomp").stylableRadio("enable")
       });
     </script>
   </body>
