--- a/demo/radio.html
+++ b/demo/radio.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
 
     <style type="text/css">
 
@@ -78,7 +78,7 @@ input[type="radio"] + label { color: blue }
     </div>
 
     <script src="//codeorigin.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="//rawgithub.com/applicius/yacsscomp/master/yacsscomp.js"></script>
     <script type="text/javascript">
       $("input[type='radio'] + label").stylableRadio();
