--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Yet Another CSS Components library</title>
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
   </head>
   <body>
     <h1>Yet Another CSS Components library</h1>
@@ -14,6 +14,7 @@
       <li><a href="./demo/checkbox.html">Stylable checkbox</a></li>
     </ul>
 
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="//codeorigin.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   </body>
 </html>
